--- a/assets/styles/user.less
+++ b/assets/styles/user.less
@@ -211,6 +211,7 @@
 			font-size: 10px;
 			text-decoration: none;
 			
+            
 			&:hover {
 				text-decoration: underline;
 			}
@@ -218,6 +219,10 @@
 		.right {
 			float: right;
 		}
+        .activity-remove-link {
+            margin-left: 10px;
+        }
+        
 	}
 	
 	
@@ -264,6 +269,62 @@
 			float: right;
 		}
 	}
+    
+    .activity-share {
+        display: none;
+		padding: 0;
+		margin: 20px 0 0 0;
+		list-style: none;
+		background: @border-color;
+        
+        .button-share {
+            width: 23% !important;
+            margin-right: 1% !important;
+            margin-left: 1% !important;
+        }
+        .share-box {
+            padding: 20px;
+        }
+        
+        &.detach {
+            position: absolute;
+            z-index: 11;
+            width: 150px;
+            background: rgba(221, 221, 221, 0.70);
+            .rounded(2px);
+            .inner-shadow(0px, 2px, 1.0);
+            
+            .share-box {
+                padding: 15px;
+            }
+            
+            .button-share {
+                width: 100% !important;
+                margin-right: 0 !important;
+                margin-left: 0 !important;
+                float: none;
+                margin-top: 10px;
+                
+                &:first-child {
+                    margin-top: 0;
+                }
+            }
+            
+            &:after {
+                @size : 16px;
+                position: absolute;
+                bottom: 100%;
+                left: 50%;
+                margin-left: -@size;
+                border: @size solid transparent;
+                border-bottom-color: rgba(221, 221, 221, 0.70);
+                border-top-width: 0;
+                width: @size;
+                height: @size;
+                content: "";
+            }
+        }
+    }
 }
 
 .notification {
