Added support for removing activity posts

--- a/assets/styles/main.less
+++ b/assets/styles/main.less
@@ -31,8 +31,8 @@
 @transparent-black : rgba(0,0,0,0.8);
 
 @content-width: 1050px;
-@content-width-small: 900px;
-@content-width-smallest : 800px;
+@content-width-small: 800px;
+@content-width-smallest : 600px;
 @content-width-mobile : 550px;
 
 *, *:before, *:after {
@@ -240,6 +240,7 @@ h3, .list-title {
 	}
 	@media (max-width: @content-width-small) {
 		width: 100%;
+        border-right: none;
 	}
 }
 
